--- a/idle.html
+++ b/idle.html
@@ -648,7 +648,7 @@
 							<div class="space"></div>
 							<div>TANK</div>
 							<div id="dungeon_tankPower">POWER: 250</div>
-							<div class="space"></div>
+							<div id="dungeon_tankStatus" class="space"></div>
 							<div class="dungeon_hpBarOutside">
 								<div id="dungeon_tankHealth" class="dungeon_hpBarInside"></div>
 							</div>
@@ -657,7 +657,7 @@
 							<div class="space"></div>
 							<div>HEALER</div>
 							<div id="dungeon_healerPower">POWER: 250</div>
-							<div class="space"></div>
+							<div id="dungeon_healerStatus" class="space"></div>
 							<div class="dungeon_hpBarOutside">
 								<div id="dungeon_healerHealth" class="dungeon_hpBarInside"></div>
 							</div>
@@ -666,7 +666,7 @@
 							<div class="space"></div>
 							<div>YOU</div>
 							<div id="dungeon_playerPower">POWER: 250</div>
-							<div class="space"></div>
+							<div id="dungeon_playerStatus" class="space"></div>
 							<div class="dungeon_hpBarOutside">
 								<div id="dungeon_playerHealth" class="dungeon_hpBarInside"></div>
 							</div>
@@ -675,7 +675,7 @@
 							<div class="space"></div>
 							<div>DPS NR.2</div>
 							<div id="dungeon_dps2Power">POWER: 250</div>
-							<div class="space"></div>
+							<div id="dungeon_dps2Status" class="space"></div>
 							<div class="dungeon_hpBarOutside">
 								<div id="dungeon_dps2Health" class="dungeon_hpBarInside"></div>
 							</div>
@@ -684,7 +684,7 @@
 							<div class="space"></div>
 							<div>DPS NR.3</div>
 							<div id="dungeon_dps3Power">POWER: 250</div>
-							<div class="space"></div>
+							<div id="dungeon_dps3Status" class="space"></div>
 							<div class="dungeon_hpBarOutside">
 								<div id="dungeon_dps3Health" class="dungeon_hpBarInside"></div>
 							</div>
