Dungeons - Allies in new file
- Moved Ally classes to new file as it looks like it's gonna be huge amount of code.
- Finally configured my workspace and npm... I wanted to not do it but parsing definition of functions is worth it (I hope). Anyway there is more to gitignore

--- a/idle.html
+++ b/idle.html
@@ -33,6 +33,7 @@
 	<script src="questing.js?v=34"></script>
 	<script src="shops.js?v=34"></script>
 	<script src="smith.js?v=34"></script>
+	<script src="dungeonAllies.js"></script>
 	<script src="dungeon.js"></script>
 
 	<script src="idle.js?v=34"></script>
