Savefile - Export and import
- Added posibility to export and import save files. This will help with balancing and debugging.
- For now this option is invisible to standard user as it's ugly.

--- a/idle.html
+++ b/idle.html
@@ -43,6 +43,11 @@
 		<div id="info_panel">
 			<h3 id="statsHeader" style="padding-left: 2px;">STATISTICS:</h3>
 			<div class="player_info_group">
+				<label style="display: none;">
+					<strong>Import save file</strong>
+					<input id="fileInput" type="file" style="display:none" />
+					<button id="exportButton">EXPORT</button>
+				</label>
 				<div class="player_info_element">
 					Level:
 					<span id="player_info_level"></span>
