Dungeons - New Dungeons
- Added new dungeons (only one have proper setup)
- Nerfed damage of the enemies
- Buffed tank (again)
- Allies now have gear dependent on dungeon difficulty.
- Moved dungeons to new file
- Dungeon button now appears on level 12

--- a/idle.html
+++ b/idle.html
@@ -20,9 +20,11 @@
 
 	<script src="enums.js?v=34"></script>
 	<script src="item.js?v=34"></script>
-	<script src="player.js?v=34"></script>
 	<script src="enemies.js?v=34"></script>
 	<script src="battleZones.js?v=34"></script>
+	<script src="dungeonZones.js"></script>
+
+	<script src="player.js?v=34"></script>
 	<script src="buffs.js?v=34"></script>
 	
 	<script src="saveSystem.js?v=2"></script>
@@ -706,7 +708,7 @@
 					<button id="questingButton">QUESTS</button>
 					<button id="recoverHealthButton" style="display: none;">HEAL</button>
 					<button id="trainingButton" style="display: none;">TRAIN</button>
-					<button id="dungeonButton" style="display: block;">DUNGEONS</button>
+					<button id="dungeonButton" style="display: none;">DUNGEONS</button>
 				</span>
 				<span style="display: flex; flex-direction: row-reverse; width: 50%;">
 					<button id="equipmentButton" style="display: none;">EQ</button>
