Dungeons - Merge ready
- Added rest of the enemies to the game.
- All dungeons are now populated by enemies. Are they balanced? Probably not, lol.
- Added small gaps between ally and enemy squares for better visuals
- Fixed bug that ally did not reset it's target ID after each wave.
- Nerf for the tank, he was a bit too strong.
- Now reward for finishing dungeons are 2 items instead of 1.

--- a/idle.html
+++ b/idle.html
@@ -661,6 +661,7 @@
 								<div id="dungeon_tankHealth" class="dungeon_hpBarInside"></div>
 							</div>
 						</div>
+						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
 							<div>HEALER</div>
@@ -670,6 +671,7 @@
 								<div id="dungeon_healerHealth" class="dungeon_hpBarInside"></div>
 							</div>
 						</div>
+						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
 							<div>YOU</div>
@@ -679,6 +681,7 @@
 								<div id="dungeon_playerHealth" class="dungeon_hpBarInside"></div>
 							</div>
 						</div>
+						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
 							<div>DPS NR.2</div>
@@ -688,6 +691,7 @@
 								<div id="dungeon_dps2Health" class="dungeon_hpBarInside"></div>
 							</div>
 						</div>
+						<div style="width: 2px;"></div>
 						<div class="dungeon_allySquare">
 							<div class="space"></div>
 							<div>DPS NR.3</div>
