--- a/idle.html
+++ b/idle.html
@@ -13,32 +13,31 @@
 		@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 	</style>
 
-	<link rel="stylesheet" href="idle.css?v=34">
-	<link rel="stylesheet" href="dungeon.css">
+	<link rel="stylesheet" href="idle.css?v=35">
+	<link rel="stylesheet" href="dungeon.css?v=35">
 	
-	<script src="uiFunctions.js?v=34"></script>
+	<script src="uiFunctions.js?v=35"></script>
 
-	<script src="enums.js?v=34"></script>
-	<script src="item.js?v=34"></script>
-	<script src="enemies.js?v=34"></script>
-	<script src="battleZones.js?v=34"></script>
-	<script src="dungeonZones.js"></script>
-
-	<script src="player.js?v=34"></script>
-	<script src="buffs.js?v=34"></script>
+	<script src="enums.js?v=35"></script>
+	<script src="item.js?v=35"></script>
+	<script src="enemies.js?v=35"></script>
+	<script src="battleZones.js?v=35"></script>
+	<script src="dungeonZones.js?v=35"></script>
+	<script src="player.js?v=35"></script>
+	<script src="buffs.js?v=35"></script>
 	
-	<script src="saveSystem.js?v=2"></script>
+	<script src="saveSystem.js?v=35"></script>
 
-	<script src="battle.js?v=34"></script>
-	<script src="healing.js?v=34"></script>
-	<script src="training.js?v=34"></script>
-	<script src="questing.js?v=34"></script>
-	<script src="shops.js?v=34"></script>
-	<script src="smith.js?v=34"></script>
-	<script src="dungeonAllies.js"></script>
-	<script src="dungeon.js"></script>
+	<script src="battle.js?v=35"></script>
+	<script src="healing.js?v=35"></script>
+	<script src="training.js?v=35"></script>
+	<script src="questing.js?v=35"></script>
+	<script src="shops.js?v=35"></script>
+	<script src="smith.js?v=35"></script>
+	<script src="dungeonAllies.js?v=35"></script>
+	<script src="dungeon.js?v=35"></script>
 
-	<script src="idle.js?v=34"></script>
+	<script src="idle.js?v=35"></script>
 </head>
 <body>
 	<div id="new_content">
