UI Responsiveness - Title change
- Removed Idle from website title as I didn't like it :>

--- a/idle.html
+++ b/idle.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Idle Not MMO, Still RPG</title>
+	<title>Not MMO, Still RPG</title>
 
 	<!-- Idle game made by Piotr "Xeiciu" Lisowski 
 		currently game can be played at xeiciu.com/idle.html
