UI Responsiveness - Level Up button + main content
- Started cleaning out what I need from what I don't need.
- Added animations and moved css to new file
- Changed timers for level up button.
- Fixed paddings for main content. Now there are no additional scroll bars.

--- a/idle.html
+++ b/idle.html
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" href="idle.css?v=36">
 	<link rel="stylesheet" href="dungeon.css?v=36">
+	<link rel="stylesheet" href="popUp.css?v=36">
 	<link rel="stylesheet" href="shops/shops.css?v=36">
 	
 	<script src="uiFunctions.js?v=36"></script>
@@ -116,8 +117,6 @@
 			<div class="player_info_group" id="player_info_buffs">
 			</div>
 		</div>
-
-		<div class="vertical_spacer"></div>
 
 		<div id="main_panel">
 			<!-- Tick bar and task info -->
