UI Responsiveness - Generic Popup, defer JS
- I'm starting to defer JavaScript as I have no idea what it does but heard it's good thing to do. (Faster rendering or something, lol).
- Making popup more generic as I want to put there info for leveling up, new items, unlocked functions ect.

--- a/idle.html
+++ b/idle.html
@@ -18,28 +18,29 @@
 	<link rel="stylesheet" href="popUp.css?v=36">
 	<link rel="stylesheet" href="shops/shops.css?v=36">
 	
-	<script src="uiFunctions.js?v=36"></script>
+	<script defer src="UI/UI_PopUp.js?v=36"></script>
+	<script defer src="uiFunctions.js?v=36"></script>
 
-	<script src="enums.js?v=36"></script>
-	<script src="item.js?v=36"></script>
-	<script src="enemies.js?v=36"></script>
-	<script src="battleZones.js?v=36"></script>
-	<script src="dungeonZones.js?v=36"></script>
-	<script src="player.js?v=36"></script>
-	<script src="buffs.js?v=36"></script>
+	<script defer src="enums.js?v=36"></script>
+	<script defer src="item.js?v=36"></script>
+	<script defer src="enemies.js?v=36"></script>
+	<script defer src="battleZones.js?v=36"></script>
+	<script defer src="dungeonZones.js?v=36"></script>
+	<script defer src="player.js?v=36"></script>
+	<script defer src="buffs.js?v=36"></script>
 	
-	<script src="saveSystem.js?v=36"></script>
+	<script defer src="saveSystem.js?v=36"></script>
 
-	<script src="battle.js?v=36"></script>
-	<script src="healing.js?v=36"></script>
-	<script src="training.js?v=36"></script>
-	<script src="questing.js?v=36"></script>
-	<script src="shops.js?v=36"></script>
-	<script src="smith.js?v=36"></script>
-	<script src="dungeonAllies.js?v=36"></script>
-	<script src="dungeon.js?v=36"></script>
+	<script defer src="battle.js?v=36"></script>
+	<script defer src="healing.js?v=36"></script>
+	<script defer src="training.js?v=36"></script>
+	<script defer src="questing.js?v=36"></script>
+	<script defer src="shops.js?v=36"></script>
+	<script defer src="smith.js?v=36"></script>
+	<script defer src="dungeonAllies.js?v=36"></script>
+	<script defer src="dungeon.js?v=36"></script>
 
-	<script src="idle.js?v=36"></script>
+	<script defer src="idle.js?v=36"></script>
 </head>
 <body>
 	<div id="new_content">
