UI Responsiveness - Level Up popup done!
- Created helper functions for easier div production.
- Added system informing what player unlocked with each level. It's not automatic and horrible but works.
- Rebalanced features to be unlocked faster
- Moved popup css and renamed it to new style of naming

Note: Sometimes I feel like a smart person only to later realize I'm dum dum... I just realized that I can automate creating divs with text content faster :C

--- a/idle.html
+++ b/idle.html
@@ -15,9 +15,10 @@
 
 	<link rel="stylesheet" href="idle.css?v=36">
 	<link rel="stylesheet" href="dungeon.css?v=36">
-	<link rel="stylesheet" href="popUp.css?v=36">
+	<link rel="stylesheet" href="UI/UI_PopUp.css?v=36">
 	<link rel="stylesheet" href="shops/shops.css?v=36">
 	
+	<script src="UI/UI_DivHelpers.js?v=36"></script>
 	<script defer src="UI/UI_PopUp.js?v=36"></script>
 	<script defer src="uiFunctions.js?v=36"></script>
 
