UI responsiveness - Item drops
- Removed old info about dropped items
- New popup for dropped items (now with colors!)
- Added colors for item rarity
- Centered back popups

--- a/idle.html
+++ b/idle.html
@@ -144,20 +144,8 @@
 
 				<div id="battle_window_battle">
 
-					<!-- Info about drops -->
-					<div id="battle_window_drops" style="opacity: 0;display: flex;width: 100%;height: 15%;flex-direction: column;">
-						<div style="height: 33%;width: 100%;display: flex;justify-content: center;align-items: center;">! NEW ITEM !</div>
-						<div style="height: 67%; width: 100%; display: flex;">
-							<span style="width: 50%; height: 100%;">
-								<div id="battle_window_drops_name" class="battle_window_drops_statistic"></div>
-								<div id="battle_window_drops_rarity" class="battle_window_drops_statistic"></div>
-							</span>
-							<span style="width: 50%; height: 100%;">
-								<div id="battle_window_drops_slot" class="battle_window_drops_statistic"></div>
-								<div id="battle_window_drops_power" class="battle_window_drops_statistic"></div>
-							</span>
-						</div>
-					</div>
+					<!-- Empty place before there were item drops -->
+					<div id="battle_window_drops" style="opacity: 0;display: flex;width: 100%;height: 15%;flex-direction: column;"></div>
 
 					<div style="height: 15%;"></div>
 
