UI responsiveness - Equipment colors
- Text is now above overlay inside equipment tab.

--- a/idle.html
+++ b/idle.html
@@ -294,47 +294,85 @@
 				<div class="equipment_slot" style="position: relative;">
 					<div class="equipment_slot_content">
 						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">
-							<div style="z-index: 2;">Helmet:</div>
+							<div style="z-index: 2;">Helmet: </div>
 						</span>
-						<span class="equipment_slot_info" style="width: 10%; background-color: #555" id="equipment_helmet_level">0</span>
-						<span class="equipment_slot_info" style="width: 15%; background-color: #646464" id="equipment_helmet_power">0</span>
-						<span class="equipment_slot_info" style="width: 55%; background-color: #555" id="equipment_helmet_name">None</span>
+						<span class="equipment_slot_info" style="width: 10%; background-color: #555">
+							<div id="equipment_helmet_level" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
+							<div id="equipment_helmet_power" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+							<div id="equipment_helmet_name" style="z-index: 2;">None</div>
+						</span>
 					</div>
 					<div class="equipment_slot_overlay" id="equipment_helmet_overlay"></div>
 				</div>
 				<div class="equipment_slot" style="position: relative;">
 					<div class="equipment_slot_content">
-						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Body Armour: </span>
-						<span class="equipment_slot_info" style="width: 10%; background-color: #555" id="equipment_body_armour_level">0</span>
-						<span class="equipment_slot_info" style="width: 15%; background-color: #646464" id="equipment_body_armour_power">0</span>
-						<span class="equipment_slot_info" style="width: 55%; background-color: #555" id="equipment_body_armour_name">None</span>
+						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">
+							<div style="z-index: 2;">Body Armour: </div>
+						</span>
+						<span class="equipment_slot_info" style="width: 10%; background-color: #555">
+							<div id="equipment_body_armour_level" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
+							<div id="equipment_body_armour_power" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+							<div id="equipment_body_armour_name" style="z-index: 2;">None</div>
+						</span>
 					</div>
 					<div class="equipment_slot_overlay" id="equipment_body_armour_overlay"></div>
 				</div>
 				<div class="equipment_slot" style="position: relative;">
 					<div class="equipment_slot_content">
-						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Gloves: </span>
-						<span class="equipment_slot_info" style="width: 10%; background-color: #555" id="equipment_gloves_level">0</span>
-						<span class="equipment_slot_info" style="width: 15%; background-color: #646464" id="equipment_gloves_power">0</span>
-						<span class="equipment_slot_info" style="width: 55%; background-color: #555" id="equipment_gloves_name">None</span>
+						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">
+							<div style="z-index: 2;">Gloves: </div>
+						</span>
+						<span class="equipment_slot_info" style="width: 10%; background-color: #555">
+							<div id="equipment_gloves_level" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
+							<div id="equipment_gloves_power" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+							<div id="equipment_gloves_name" style="z-index: 2;">None</div>
+						</span>
 					</div>
 					<div class="equipment_slot_overlay" id="equipment_gloves_overlay"></div>
 				</div>
 				<div class="equipment_slot" style="position: relative;">
 					<div class="equipment_slot_content">
-						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Boots: </span>
-						<span class="equipment_slot_info" style="width: 10%; background-color: #555" id="equipment_boots_level">0</span>
-						<span class="equipment_slot_info" style="width: 15%; background-color: #646464" id="equipment_boots_power">0</span>
-						<span class="equipment_slot_info" style="width: 55%; background-color: #555" id="equipment_boots_name">None</span>
+						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">
+							<div style="z-index: 2;">Boots: </div>
+						</span>
+						<span class="equipment_slot_info" style="width: 10%; background-color: #555">
+							<div id="equipment_boots_level" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
+							<div id="equipment_boots_power" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+							<div id="equipment_boots_name" style="z-index: 2;">None</div>
+						</span>
 					</div>
 					<div class="equipment_slot_overlay" id="equipment_boots_overlay"></div>
 				</div>
 				<div class="equipment_slot" style="position: relative;">
 					<div class="equipment_slot_content">
-						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">Weapon: </span>
-						<span class="equipment_slot_info" style="width: 10%; background-color: #555" id="equipment_weapon_level">0</span>
-						<span class="equipment_slot_info" style="width: 15%; background-color: #646464" id="equipment_weapon_power">0</span>
-						<span class="equipment_slot_info" style="width: 55%; background-color: #555" id="equipment_weapon_name">Fists</span>
+						<span class="equipment_slot_info" style="width: 20%; border-left: none; background-color: #646464">
+							<div style="z-index: 2;">Weapon: </div>
+						</span>
+						<span class="equipment_slot_info" style="width: 10%; background-color: #555">
+							<div id="equipment_weapon_level" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 15%; background-color: #646464">
+							<div id="equipment_weapon_power" style="z-index: 2;">0</div>
+						</span>
+						<span class="equipment_slot_info" style="width: 55%; background-color: #555">
+							<div id="equipment_weapon_name" style="z-index: 2;">Fists</div>
+						</span>
 					</div>
 					<div class="equipment_slot_overlay" id="equipment_weapon_overlay"></div>
 				</div>
